--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5310,5 +5310,6 @@
   "activityAnalyticsTooltipBody": "These are your saved activities for review and practice.",
   "numSavedActivities": "Number of saved activities",
   "saveActivityTitle": "Save activity",
-  "saveActivityDesc": "Good job! Save this activity for later review and practice"
+  "saveActivityDesc": "Good job! Save this activity for later review and practice",
+  "levelInfoTooltip": "Here you can see all the points you’ve earned and how!"
 }
