feat: show warning popup when user selects course plan in new course page if user is already in a course with the same ID

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5311,5 +5311,7 @@
   "numSavedActivities": "Number of saved activities",
   "saveActivityTitle": "Save activity",
   "saveActivityDesc": "Good job! Save this activity for later review and practice",
-  "levelInfoTooltip": "Here you can see all the points you’ve earned and how!"
+  "levelInfoTooltip": "Here you can see all the points you’ve earned and how!",
+  "alreadyInCourseWithID": "You are already in a course with this plan. Do you want to create a course with the same plan, or go to the existing course?",
+  "goToExistingCourse": "Go to existing course"
 }
