--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5317,5 +5317,7 @@
   "feedbackDialogDesc": "I make mistakes too! Anything to help me improve?",
   "getStartedFriendsButton": "Invite a friend",
   "contactHasBeenInvitedToTheCourse": "Contact has been invited to the course",
-  "inviteFriends": "Invite friends"
+  "inviteFriends": "Invite friends",
+  "allow": "Allow",
+  "deny": "Deny"
 }
