--- a/lib/l10n/intl_bn.arb
+++ b/lib/l10n/intl_bn.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-04 13:35:07.054864",
+  "@@last_modified": "2025-11-05 10:36:51.740282",
   "about": "সম্পর্কে",
   "@about": {
     "type": "String",
@@ -4944,7 +4944,7 @@
   "loginToAccount": "আমার অ্যাকাউন্টে লগইন করুন",
   "appDescription": "একটি ভাষা শিখুন\nআপনার বন্ধুদের সাথে মেসেজিং করার সময়।",
   "languages": "ভাষাসমূহ",
-  "chooseLanguage": "একটি ভাষা নির্বাচন করুন।",
+  "chooseLanguage": "একটি লক্ষ্য ভাষা নির্বাচন করুন।",
   "planTrip": "আপনার যাত্রা পরিকল্পনা করুন",
   "howAreYouTraveling": "আপনি কিভাবে ভ্রমণ করছেন?",
   "unlockPrivateTrip": "একটি ব্যক্তিগত যাত্রা আনলক করুন",
