--- a/lib/l10n/intl_lv.arb
+++ b/lib/l10n/intl_lv.arb
@@ -4919,7 +4919,7 @@
   "loginToAccount": "Pierakstieties savā kontā",
   "appDescription": "Mācieties valodu\nrakstot ziņas draugiem.",
   "languages": "Valodas",
-  "chooseLanguage": "Izvēlieties valodu.",
+  "chooseLanguage": "Izvēlieties mērķa valodu.",
   "planTrip": "Plānojiet savu ceļojumu",
   "howAreYouTraveling": "Kā jūs ceļojat?",
   "unlockPrivateTrip": "Atbloķēt privātu ceļojumu",
@@ -4958,7 +4958,7 @@
   "playWithAI": "Tagad spēlējiet ar AI",
   "courseStartDesc": "Pangea bots ir gatavs jebkurā laikā!\n\n...bet mācīties ir labāk ar draugiem!",
   "@@locale": "lv",
-  "@@last_modified": "2025-11-04 13:34:40.949441",
+  "@@last_modified": "2025-11-05 10:36:40.560436",
   "analyticsInactiveTitle": "Pieprasījumi neaktīviem lietotājiem nevar tikt nosūtīti",
   "analyticsInactiveDesc": "Neaktīvi lietotāji, kuri nav pieteikušies kopš šīs funkcijas ieviešanas, neredzēs jūsu pieprasījumu.\n\nPieprasījuma poga parādīsies, kad viņi atgriezīsies. Jūs varat atkārtoti nosūtīt pieprasījumu vēlāk, noklikšķinot uz pieprasījuma pogas viņu vārdā, kad tā būs pieejama.",
   "accessRequestedTitle": "Pieprasījums piekļūt analītikai",
