--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ru",
-  "@@last_modified": "2025-11-04 13:35:28.162026",
+  "@@last_modified": "2025-11-05 10:37:08.836630",
   "about": "О проекте",
   "@about": {
     "type": "String",
@@ -4889,7 +4889,7 @@
   "loginToAccount": "войти в мой установки",
   "appDescription": "Совседанно наступайте человеческий язык,например, в котором написате друзям.",
   "languages": "Конфедерации",
-  "chooseLanguage": "Выберите человеческий язык.",
+  "chooseLanguage": "Выберите целевой язык.",
   "planTrip": "Планите поездку",
   "howAreYouTraveling": "Как вы проезжаете?",
   "unlockPrivateTrip": "Обекращиваете свой событие",
