--- a/lib/l10n/intl_ta.arb
+++ b/lib/l10n/intl_ta.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-04 13:34:57.181084",
+  "@@last_modified": "2025-11-05 10:36:47.517328",
   "acceptedTheInvitation": "👍 {username} அழைப்பை ஏற்றுக்கொண்டது",
   "@acceptedTheInvitation": {
     "type": "String",
@@ -4827,7 +4827,7 @@
   "loginToAccount": "என் கணக்கில் உள்நுழையவும்",
   "appDescription": "ஒரு மொழியை கற்றுக்கொள்ளுங்கள்\nஉங்கள் நண்பர்களுடன் உரையாடும் போது.",
   "languages": "மொழிகள்",
-  "chooseLanguage": "ஒரு மொழியை தேர்ந்தெடுக்கவும்.",
+  "chooseLanguage": "ஒரு இலக்கு மொழியை தேர்வு செய்யவும்.",
   "planTrip": "உங்கள் பயணத்தை திட்டமிடுங்கள்",
   "howAreYouTraveling": "நீங்கள் எப்படி பயணம் செய்து கொண்டிருக்கிறீர்கள்?",
   "unlockPrivateTrip": "தனிப்பட்ட பயணத்தை திறக்கவும்",
