--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "uk",
-  "@@last_modified": "2025-11-04 13:34:20.995929",
+  "@@last_modified": "2025-11-05 10:36:27.587644",
   "about": "Про застосунок",
   "@about": {
     "type": "String",
@@ -4953,7 +4953,7 @@
   "loginToAccount": "Увійти до мого облікового запису",
   "appDescription": "Вивчайте мову\nпишучи повідомлення друзям.",
   "languages": "Мови",
-  "chooseLanguage": "Виберіть мову.",
+  "chooseLanguage": "Виберіть мову призначення.",
   "planTrip": "Сплануйте свою поїздку",
   "howAreYouTraveling": "Як ви подорожуєте?",
   "unlockPrivateTrip": "Розблокувати приватну поїздку",
