--- a/lib/l10n/intl_be.arb
+++ b/lib/l10n/intl_be.arb
@@ -2353,7 +2353,7 @@
   "loginToAccount": "Увайсці ў мой рахунак",
   "appDescription": "Вучыце мову\nпраз адпраўку тэкставых паведамленняў сябрам.",
   "languages": "Мовы",
-  "chooseLanguage": "Выберыце мову.",
+  "chooseLanguage": "Выберыце мову мэты.",
   "planTrip": "Плануйце сваю паездку",
   "howAreYouTraveling": "Як вы падарожнічаеце?",
   "unlockPrivateTrip": "Разблакаваць прыватную паездку",
@@ -2392,7 +2392,7 @@
   "playWithAI": "Пакуль гуляйце з ШІ",
   "courseStartDesc": "Pangea Bot гатовы да працы ў любы час!\n\n...але навучанне лепш з сябрамі!",
   "@@locale": "be",
-  "@@last_modified": "2025-11-04 13:34:29.024561",
+  "@@last_modified": "2025-11-05 10:36:32.186191",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
