--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "es",
-  "@@last_modified": "2025-11-04 13:33:35.588794",
+  "@@last_modified": "2025-11-05 10:35:54.668400",
   "about": "Acerca de",
   "@about": {
     "type": "String",
@@ -6460,7 +6460,7 @@
   "loginToAccount": "Iniciar sesión en mi cuenta",
   "appDescription": "Aprende un idioma\nmientras envías mensajes a tus amigos.",
   "languages": "Idiomas",
-  "chooseLanguage": "Elige un idioma.",
+  "chooseLanguage": "Elige un idioma de destino.",
   "planTrip": "Planifica tu viaje",
   "howAreYouTraveling": "¿Cómo viajas?",
   "unlockPrivateTrip": "Desbloquear un viaje privado",
