--- a/lib/l10n/intl_eu.arb
+++ b/lib/l10n/intl_eu.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "eu",
-  "@@last_modified": "2025-11-04 13:34:05.712800",
+  "@@last_modified": "2025-11-05 10:36:18.321430",
   "about": "Honi buruz",
   "@about": {
     "type": "String",
@@ -4951,7 +4951,7 @@
   "loginToAccount": "Hasi saioa nire kontuan",
   "appDescription": "Ikasi hizkuntza\nzure lagunekin mezularitza egiten bitartean.",
   "languages": "Hizkuntzak",
-  "chooseLanguage": "Hizkuntza aukeratu.",
+  "chooseLanguage": "Hautatu helburu hizkuntza bat.",
   "planTrip": "Planifikatu zure bidaiaren",
   "howAreYouTraveling": "Nola bidaiatzen ari zara?",
   "unlockPrivateTrip": "Galdetu bidaia pribatua",
