--- a/lib/l10n/intl_ga.arb
+++ b/lib/l10n/intl_ga.arb
@@ -4959,7 +4959,7 @@
   "loginToAccount": "Logáil isteach i mo chuntas",
   "appDescription": "Foghlaim teanga\nag an am céanna le do chairde.",
   "languages": "Teangacha",
-  "chooseLanguage": "Roghnaigh teanga.",
+  "chooseLanguage": "Roghnaigh teanga sprioc.",
   "planTrip": "Pleanáil do thuras",
   "howAreYouTraveling": "Conas atá tú ag taisteal?",
   "unlockPrivateTrip": "Díghlasáil turas príobháideach",
@@ -4998,7 +4998,7 @@
   "playWithAI": "Imir le AI faoi láthair",
   "courseStartDesc": "Tá Bot Pangea réidh chun dul am ar bith!\n\n...ach is fearr foghlaim le cairde!",
   "@@locale": "ga",
-  "@@last_modified": "2025-11-04 13:35:39.442358",
+  "@@last_modified": "2025-11-05 10:37:11.843634",
   "@customReaction": {
     "type": "String",
     "placeholders": {}
