--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -4925,7 +4925,7 @@
   "loginToAccount": "मेरे खाते में लॉगिन करें",
   "appDescription": "एक भाषा सीखें\nजब आप अपने दोस्तों को मैसेज कर रहे हों।",
   "languages": "भाषाएँ",
-  "chooseLanguage": "एक भाषा चुनें।",
+  "chooseLanguage": "लक्षित भाषा चुनें।",
   "planTrip": "अपनी यात्रा की योजना बनाएं",
   "howAreYouTraveling": "आप कैसे यात्रा कर रहे हैं?",
   "unlockPrivateTrip": "एक निजी यात्रा अनलॉक करें",
@@ -4964,7 +4964,7 @@
   "playWithAI": "अभी के लिए एआई के साथ खेलें",
   "courseStartDesc": "पैंजिया बॉट कभी भी जाने के लिए तैयार है!\n\n...लेकिन दोस्तों के साथ सीखना बेहतर है!",
   "@@locale": "hi",
-  "@@last_modified": "2025-11-04 13:35:23.970994",
+  "@@last_modified": "2025-11-05 10:37:06.719454",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
