--- a/lib/l10n/intl_hr.arb
+++ b/lib/l10n/intl_hr.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "hr",
-  "@@last_modified": "2025-11-04 13:33:57.394567",
+  "@@last_modified": "2025-11-05 10:36:12.997351",
   "about": "Informacije",
   "@about": {
     "type": "String",
@@ -4707,7 +4707,7 @@
   "loginToAccount": "Prijavite se na svoj račun",
   "appDescription": "Učite jezik\ndok šaljete poruke prijateljima.",
   "languages": "Jezici",
-  "chooseLanguage": "Odaberite jezik.",
+  "chooseLanguage": "Odaberite ciljani jezik.",
   "planTrip": "Isplanirajte svoje putovanje",
   "howAreYouTraveling": "Kako putujete?",
   "unlockPrivateTrip": "Otključajte privatno putovanje",
