--- a/lib/l10n/intl_id.arb
+++ b/lib/l10n/intl_id.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-04 13:33:48.096891",
+  "@@last_modified": "2025-11-05 10:36:06.332044",
   "setAsCanonicalAlias": "Atur sebagai alias utama",
   "@setAsCanonicalAlias": {
     "type": "String",
@@ -4953,7 +4953,7 @@
   "loginToAccount": "Masuk ke akun saya",
   "appDescription": "Pelajari bahasa\nsambil mengirim pesan kepada teman.",
   "languages": "Bahasa",
-  "chooseLanguage": "Pilih bahasa.",
+  "chooseLanguage": "Pilih bahasa target.",
   "planTrip": "Rencanakan perjalanan Anda",
   "howAreYouTraveling": "Bagaimana Anda bepergian?",
   "unlockPrivateTrip": "Buka perjalanan pribadi",
