--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-04 13:34:19.072263",
+  "@@last_modified": "2025-11-05 10:36:25.956014",
   "about": "Informazioni",
   "@about": {
     "type": "String",
@@ -4930,7 +4930,7 @@
   "loginToAccount": "Accedi al mio account",
   "appDescription": "Impara una lingua\nmentre scrivi ai tuoi amici.",
   "languages": "Lingue",
-  "chooseLanguage": "Scegli una lingua.",
+  "chooseLanguage": "Scegli una lingua di destinazione.",
   "planTrip": "Pianifica il tuo viaggio",
   "howAreYouTraveling": "Come stai viaggiando?",
   "unlockPrivateTrip": "Sblocca un viaggio privato",
