--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-04 13:33:33.344908",
+  "@@last_modified": "2025-11-05 10:35:53.557051",
   "about": "소개",
   "@about": {
     "type": "String",
@@ -4887,7 +4887,7 @@
   "loginToAccount": "내 계정에 로그인",
   "appDescription": "친구들과 문자 메시지를 보내며 언어를 배우세요.",
   "languages": "언어",
-  "chooseLanguage": "언어를 선택하세요.",
+  "chooseLanguage": "대상 언어를 선택하세요.",
   "planTrip": "여행 계획 세우기",
   "howAreYouTraveling": "어떻게 여행하고 계세요?",
   "unlockPrivateTrip": "개인 여행 잠금 해제",
