--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-04 13:34:26.297705",
+  "@@last_modified": "2025-11-05 10:36:30.009807",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -3866,7 +3866,7 @@
   "loginToAccount": "Logg inn på kontoen min",
   "appDescription": "Lær et språk\nmens du sender tekst til vennene dine.",
   "languages": "Språk",
-  "chooseLanguage": "Velg et språk.",
+  "chooseLanguage": "Velg et målspråk.",
   "planTrip": "Planlegg reisen din",
   "howAreYouTraveling": "Hvordan reiser du?",
   "unlockPrivateTrip": "Lås opp en privat reise",
