--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-04 13:34:59.239403",
+  "@@last_modified": "2025-11-05 10:36:48.331456",
   "about": "Over ons",
   "@about": {
     "type": "String",
@@ -4950,7 +4950,7 @@
   "loginToAccount": "Log in op mijn account",
   "appDescription": "Leer een taal\nterwijl je met je vrienden chat.",
   "languages": "Talen",
-  "chooseLanguage": "Kies een taal.",
+  "chooseLanguage": "Kies een doeltaal.",
   "planTrip": "Plan je reis",
   "howAreYouTraveling": "Hoe reis je?",
   "unlockPrivateTrip": "Ontgrendel een privéreis",
