--- a/lib/l10n/intl_sk.arb
+++ b/lib/l10n/intl_sk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "sk",
-  "@@last_modified": "2025-11-04 13:33:53.548300",
+  "@@last_modified": "2025-11-05 10:36:09.110117",
   "about": "O aplikácii",
   "@about": {
     "type": "String",
@@ -3574,7 +3574,7 @@
   "loginToAccount": "Prihlásiť sa do môjho účtu",
   "appDescription": "Naučte sa jazyk\npočas písania správ priateľom.",
   "languages": "Jazyky",
-  "chooseLanguage": "Vyberte jazyk.",
+  "chooseLanguage": "Vyberte cieľový jazyk.",
   "planTrip": "Naplánujte si svoju cestu",
   "howAreYouTraveling": "Ako cestujete?",
   "unlockPrivateTrip": "Odomknúť súkromnú cestu",
