--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-04 13:35:16.747047",
+  "@@last_modified": "2025-11-05 10:36:55.899674",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -4612,7 +4612,7 @@
   "loginToAccount": "Logga in på mitt konto",
   "appDescription": "Lär dig ett språk\nmedan du skickar meddelanden till dina vänner.",
   "languages": "Språk",
-  "chooseLanguage": "Välj ett språk.",
+  "chooseLanguage": "Välj ett målspråk.",
   "planTrip": "Planera din resa",
   "howAreYouTraveling": "Hur reser du?",
   "unlockPrivateTrip": "Lås upp en privat resa",
