--- a/lib/l10n/intl_zh_Hant.arb
+++ b/lib/l10n/intl_zh_Hant.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-04 13:34:35.934573",
+  "@@last_modified": "2025-11-05 10:36:38.094672",
   "about": "關於",
   "@about": {
     "type": "String",
@@ -4931,7 +4931,7 @@
   "loginToAccount": "登录我的账户",
   "appDescription": "学习一门语言\n同时给朋友发短信。",
   "languages": "語言",
-  "chooseLanguage": "選擇一種語言。",
+  "chooseLanguage": "選擇目標語言。",
   "planTrip": "規劃您的旅程",
   "howAreYouTraveling": "您打算如何旅行？",
   "unlockPrivateTrip": "解鎖私人行程",
